@@ -359,7 +359,7 @@ public class AdminTest {
               .sorted(
                   Comparator.comparing(Replica::topic)
                       .thenComparing(Replica::partition)
-                      .thenComparing(r -> r.broker().id()))
+                      .thenComparing(Replica::brokerId))
               .collect(Collectors.toList()),
           replicas);
     }
@@ -417,7 +417,7 @@ public class AdminTest {
       var replica = replicas.get(0);
       var idAndFolder =
           SERVICE.dataFolders().entrySet().stream()
-              .filter(e -> e.getKey() == replica.broker().id())
+              .filter(e -> e.getKey() == replica.brokerId())
               .map(e -> Map.of(e.getKey(), e.getValue().iterator().next()))
               .findFirst()
               .get();
@@ -434,7 +434,7 @@ public class AdminTest {
       Assertions.assertEquals(1, newReplicas.size());
 
       var newReplica = newReplicas.get(0);
-      Assertions.assertEquals(idAndFolder.get(newReplica.broker().id()), newReplica.path());
+      Assertions.assertEquals(idAndFolder.get(newReplica.brokerId()), newReplica.path());
     }
   }
 
@@ -590,7 +590,7 @@ public class AdminTest {
                   r ->
                       Replica.builder(r)
                           .path(
-                              source.brokerFolders().get(r.broker().id()).stream()
+                              source.brokerFolders().get(r.brokerId()).stream()
                                   .filter(p -> !p.equals(r.path()))
                                   .findAny()
                                   .orElseThrow())
@@ -720,8 +720,7 @@ public class AdminTest {
               .replicaStream()
               .iterator()
               .next()
-              .broker()
-              .id();
+              .brokerId();
       var paths = new ArrayList<>(SERVICE.dataFolders().get(id));
 
       for (var path : paths) {
@@ -850,8 +849,7 @@ public class AdminTest {
 
       var config = admin.topics(Set.of(topic)).toCompletableFuture().join().get(0).config();
       var partitions =
-          admin.partitions(Set.of(topic)).toCompletableFuture().join().stream()
-              .collect(Collectors.toUnmodifiableList());
+          admin.partitions(Set.of(topic)).toCompletableFuture().join().stream().toList();
       Assertions.assertTrue(config.raw().containsValue("lz4"));
       Assertions.assertEquals(
           List.of(0, 2),
@@ -1000,7 +998,6 @@ public class AdminTest {
               .forEach(
                   c -> {
                     Assertions.assertNotNull(c.groupId());
-                    Assertions.assertNotNull(c.coordinatorId());
                     Assertions.assertNotNull(c.assignor());
                     Assertions.assertNotNull(c.state());
                   });
@@ -1047,8 +1044,7 @@ public class AdminTest {
           () -> {
             var partitionReplicas =
                 admin.clusterInfo(Set.of(topic)).toCompletableFuture().join().replicas();
-            return partitionReplicas.size() == 1
-                && partitionReplicas.get(0).broker().id() == broker;
+            return partitionReplicas.size() == 1 && partitionReplicas.get(0).brokerId() == broker;
           });
 
       var currentBroker =
@@ -1060,8 +1056,7 @@ public class AdminTest {
               .filter(replica -> replica.partition() == 0)
               .findFirst()
               .get()
-              .broker()
-              .id();
+              .brokerId();
       var allPath = admin.brokerFolders().toCompletableFuture().join();
       var otherPath =
           allPath.get(currentBroker).stream()
@@ -1115,7 +1110,7 @@ public class AdminTest {
               .findFirst()
               .get();
 
-      var currentBroker = currentReplica.broker().id();
+      var currentBroker = currentReplica.brokerId();
       var notExistReplica = (currentBroker + 1) % SERVICE.dataFolders().keySet().size();
       var nextDir = SERVICE.dataFolders().get(notExistReplica).iterator().next();
 
@@ -1145,7 +1140,7 @@ public class AdminTest {
       Utils.waitFor(
           () -> {
             var replicas = admin.clusterInfo(Set.of(topic)).toCompletableFuture().join().replicas();
-            return replicas.stream().allMatch(r -> r.broker().id() == broker);
+            return replicas.stream().allMatch(r -> r.brokerId() == broker);
           });
     }
   }
@@ -1252,7 +1247,7 @@ public class AdminTest {
             IntStream.range(0, 5)
                 .mapToObj(i -> consumer.poll(Duration.ofSeconds(1)))
                 .flatMap(FixedIterable::stream)
-                .collect(Collectors.toList());
+                .toList();
 
         Assertions.assertEquals(
             1, records.stream().filter(record -> record.key().equals(key)).count());
@@ -1278,38 +1273,7 @@ public class AdminTest {
       Assertions.assertEquals(3, brokers.size());
       brokers.forEach(broker -> Assertions.assertNotEquals(0, broker.config().raw().size()));
       Assertions.assertEquals(1, brokers.stream().filter(Broker::isController).count());
-      brokers.forEach(broker -> Assertions.assertNotEquals(0, broker.topicPartitions().size()));
-      brokers.forEach(
-          broker -> Assertions.assertNotEquals(0, broker.topicPartitionLeaders().size()));
-    }
-  }
-
-  @Test
-  void testBrokerFolders() {
-    try (var admin = Admin.of(SERVICE.bootstrapServers())) {
-      Assertions.assertEquals(
-          SERVICE.dataFolders().keySet().size(),
-          admin.brokers().toCompletableFuture().join().size());
-      // list all
-      SERVICE
-          .dataFolders()
-          .forEach(
-              (id, ds) ->
-                  Assertions.assertEquals(
-                      admin.brokerFolders().toCompletableFuture().join().get(id).size(),
-                      ds.size()));
-
-      admin
-          .brokers()
-          .toCompletableFuture()
-          .join()
-          .forEach(
-              broker ->
-                  Assertions.assertEquals(
-                      broker.topicPartitions().size(),
-                      broker.dataFolders().stream()
-                          .mapToInt(e -> e.partitionSizes().size())
-                          .sum()));
+      brokers.forEach(broker -> Assertions.assertNotEquals(0, broker.topicPartitionPaths().size()));
     }
   }
 
@@ -1388,8 +1352,7 @@ public class AdminTest {
                       .collect(
                           Collectors.groupingBy(
                               replica -> TopicPartition.of(replica.topic(), replica.partition()),
-                              Collectors.mapping(
-                                  replica -> replica.broker().id(), Collectors.toList())));
+                              Collectors.mapping(Replica::brokerId, Collectors.toList())));
 
       IntStream.range(0, partitionCount)
           .forEach(p -> admin.moveToBrokers(Map.of(TopicPartition.of(topic, p), List.of(0, 1, 2))));
@@ -1415,10 +1378,7 @@ public class AdminTest {
               .toCompletableFuture()
               .join();
       Assertions.assertNotEquals(0, states.size());
-      var producerState =
-          states.stream()
-              .filter(s -> s.topic().equals(topic))
-              .collect(Collectors.toUnmodifiableList());
+      var producerState = states.stream().filter(s -> s.topic().equals(topic)).toList();
       Assertions.assertEquals(1, producerState.size());
     }
   }
@@ -1431,7 +1391,7 @@ public class AdminTest {
       var quotas =
           admin.quotas(Set.of(QuotaConfigs.IP)).toCompletableFuture().join().stream()
               .filter(q -> q.targetValue().equals(Utils.hostname()))
-              .collect(Collectors.toList());
+              .toList();
       Assertions.assertNotEquals(0, quotas.size());
       quotas.forEach(
           quota -> {
@@ -1465,7 +1425,7 @@ public class AdminTest {
           admin.quotas(Set.of(QuotaConfigs.CLIENT_ID)).toCompletableFuture().join().stream()
               .filter(q -> q.targetValue().equals(Utils.hostname()))
               .filter(q -> q.limitKey().equals(QuotaConfigs.PRODUCER_BYTE_RATE_CONFIG))
-              .collect(Collectors.toList());
+              .toList();
       Assertions.assertNotEquals(0, quotas.size());
       quotas.forEach(
           quota -> Assertions.assertEquals(DataRate.Byte.of(100).byteRate(), quota.limitValue()));
@@ -1495,7 +1455,7 @@ public class AdminTest {
           admin.quotas(Set.of(QuotaConfigs.CLIENT_ID)).toCompletableFuture().join().stream()
               .filter(q -> q.targetValue().equals(Utils.hostname()))
               .filter(q -> q.limitKey().equals(QuotaConfigs.CONSUMER_BYTE_RATE_CONFIG))
-              .collect(Collectors.toList());
+              .toList();
       Assertions.assertNotEquals(0, quotas.size());
       quotas.forEach(
           quota -> Assertions.assertEquals(DataRate.Byte.of(1000).byteRate(), quota.limitValue()));
@@ -1526,14 +1486,9 @@ public class AdminTest {
           .join()
           .forEach(
               broker ->
-                  broker
-                      .dataFolders()
-                      .forEach(
-                          d ->
-                              d.partitionSizes().entrySet().stream()
-                                  .filter(e -> e.getKey().topic().equals(topic))
-                                  .map(Map.Entry::getValue)
-                                  .forEach(v -> Assertions.assertEquals(0, v))));
+                  broker.topicPartitionPaths().stream()
+                      .filter(tp -> tp.topic().equals(topic))
+                      .forEach(d -> Assertions.assertEquals(0, d.size())));
     }
   }
 
@@ -1603,8 +1558,7 @@ public class AdminTest {
 
   @Test
   void testDeleteTopic() {
-    var topic =
-        IntStream.range(0, 4).mapToObj(x -> Utils.randomString()).collect(Collectors.toList());
+    var topic = IntStream.range(0, 4).mapToObj(x -> Utils.randomString()).toList();
 
     try (var admin = Admin.of(SERVICE.bootstrapServers())) {
       topic.forEach(
@@ -1684,7 +1638,7 @@ public class AdminTest {
             .toCompletableFuture()
             .join();
       }
-      String groupId = null;
+      String groupId;
       try (var consumer =
           Consumer.forTopics(Set.of(topic))
               .bootstrapServers(SERVICE.bootstrapServers())
@@ -1714,7 +1668,7 @@ public class AdminTest {
             .toCompletableFuture()
             .join();
       }
-      String groupId = null;
+      String groupId;
       try (var consumer =
           Consumer.forTopics(Set.of(topic))
               .bootstrapServers(SERVICE.bootstrapServers())
